# io-uring

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  cspell.json
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  post_create.sh
cpp/: _error.h  _event_loop.cpp  close_guard.h  closer.cpp  closer.h  config.h  create.cpp  create.h  defer.cpp  defer.h  epoll.cpp  epoll.h  error.cpp  error.h  event_fd.cpp  event_fd.h  event_loop.cpp  event_loop.h  expected.cpp  expected.h  fd.cpp  fd.h  io_uring.cpp  io_uring.h  main.cpp  raw_fd_deleter.cpp  raw_fd_deleter.h  result.cpp  result.h  runner.cpp  runner.h  runtime.cpp  runtime.h  signal_handler.cpp  signal_handler.h  status.h  stopper.cpp  stopper.h  tag.h  with.h
